// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render routes for logged in user 1`] = `
<header>
  <nav
    class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
      >
        DForum
      </a>
      <div
        class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/"
              onClick={[Function]}
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/Account"
              onClick={[Function]}
            >
              Hi 
              test
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link text-dark"
              href=""
              onClick={[Function]}
            >
              Logout
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header should render routes for not logged in user 1`] = `
<header>
  <nav
    class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
      >
        DForum
      </a>
      <div
        class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/"
              onClick={[Function]}
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/Login"
              onClick={[Function]}
            >
              Login
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/Register"
              onClick={[Function]}
            >
              Register
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;
